fix result page overflow issue

--- a/styles/results.css
+++ b/styles/results.css
@@ -1,20 +1,21 @@
 @import url("https://fonts.googleapis.com/css2?family=Anybody:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Aldrich&family=Anybody:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Aldrich&family=Anybody:ital,wght@0,100..900;1,100..900&family=Inter:wght@100..900&display=swap");
+
 #results {
   display: grid;
   place-items: center;
   min-height: calc(100vh - 12rem);
-  background: green;
+  padding-block: rem;
 }
+
 .results-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(350px,1fr));
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
   width: 80%;
   place-items: center;
   gap: 2.5rem;
-  margin-top: -8rem;
-  background: red;
+  margin-top: -4rem;
 }
 
 .results-container .card {
@@ -23,12 +24,13 @@
   display: grid;
   place-items: center;
   border-radius: 15px;
-   height: 100%;
+  height: 100%;
 }
+
 .results-container-winner .card {
   font-weight: bolder;
-  font-size: 3.5rem;
 }
+
 .card .card-container {
   display: grid;
   gap: 1.5rem;
@@ -42,14 +44,15 @@
   transform: scale(1.1);
 }
 
-.card-container .card-info{
+.card-container .card-info {
   display: grid;
   gap: 1rem;
 }
+
 .results-container .card-container .card-title h1 {
   font-family: "Anybody", sans-serif;
   font-weight: bold;
-  font-size: 3rem;
+  /* font-size: 3rem; */
   text-align: center;
 }
 
@@ -59,6 +62,7 @@
   background: whitesmoke;
   margin-bottom: 1rem;
 }
+
 .results-container .card-container .card-image img {
   height: 100%;
   width: 100%;
@@ -69,7 +73,6 @@
 .results-container .card-container .card-name h2 {
   font-family: "Aldrich", sans-serif;
   font-size: 1.5rem;
-  /* margin-inline: 2rem; */
   text-align: center;
 }
 
@@ -78,18 +81,27 @@
 }
 
 
-@media screen and (max-width:1400px){
+@media screen and (max-width:1400px) {
   .results-container-winner {
     transform: scale(1);
     order: -1;
   }
-  
-  .results-container{
-    margin-top: 2rem;
+
+  .results-container {
+    margin-top: 0;
   }
-  
+
+  .results-container .card-container .card-title h1 {
+    font-size: 2rem;
+  }
+
+  #results {
+    padding-block: 2rem;
+  }
+
 }
 
-*{
+/* 
+* {
   outline: 2px solid red;
-}
+} */
